--- a/proyecto-js/reloj.html
+++ b/proyecto-js/reloj.html
@@ -12,13 +12,10 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
-    <!--Slider-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
-
     <!--Moment-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/es.min.js"></script>
+
 
     <!--Mis Scripts-->
     <script type="text/javascript" src="js/main.js"></script>
@@ -44,25 +41,16 @@
                     <li><a href="index.html">INICIO</a></li>
                     <li><a href="reloj.html">RELOJ</a></li>
                     <li><a href="about.html">Sobre mi</a></li>
-                    <li><a href="#">Contactos</a></li>
+                    <li><a href="contact.html">Contactos</a></li>
                 </ul>
             </nav>
         </header>
 
-        <!--Slider-->
-        <div id="slider">
-            <div class="galeria">
-                <div><img src="img/hojas.jpg" title="Hojas"></div>
-                <div><img src="img/rojo.jpg" title=""></div>
-                <div><img src="img/cielo.jpg" title=""></div>
-            </div>
-
-        </div>
-
         <!--Contenido-->
         <section id="content">
-            <div id="posts">
-                <!--Cargar posts desde json-->
+            <div id="box">
+                <!--Cargar reloj-->
+                <div id="reloj"></div>
             </div>
 
             <aside id="sidebar">
