--- a/proyecto-js/about.html
+++ b/proyecto-js/about.html
@@ -10,15 +10,13 @@
 
     <!--Jquery-->
 
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="js/jquery-ui-1.12.1/jquery-ui.min.css">
+    <link rel="stylesheet" href="js/jquery-ui-1.12.1/jquery-ui.structure.min.css">
+    <link rel="stylesheet" href="js/jquery-ui-1.12.1/jquery-ui.theme.min.css">
 
-    <!--Slider-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
-
-    <!--Moment-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/es.min.js"></script>
+    <script type="text/javascript" src="js/jquery-ui-1.12.1/jquery-ui.min.js"></script>
 
     <!--Mis Scripts-->
     <script type="text/javascript" src="js/main.js"></script>
@@ -44,25 +42,43 @@
                     <li><a href="index.html">INICIO</a></li>
                     <li><a href="reloj.html">RELOJ</a></li>
                     <li><a href="about.html">Sobre mi</a></li>
-                    <li><a href="#">Contactos</a></li>
+                    <li><a href="contact.html">Contactos</a></li>
                 </ul>
             </nav>
         </header>
 
-        <!--Slider-->
-        <div id="slider">
-            <div class="galeria">
-                <div><img src="img/hojas.jpg" title="Hojas"></div>
-                <div><img src="img/rojo.jpg" title=""></div>
-                <div><img src="img/cielo.jpg" title=""></div>
-            </div>
-
-        </div>
-
         <!--Contenido-->
         <section id="content">
-            <div id="posts">
-                <!--Cargar posts desde json-->
+            <div id="box">
+                <!--Cargar acordeon-->
+                <h2>Sobre mi</h2>
+                <div id="acordeon">
+                    <h3>¿Quienes somos?</h3>
+                    <div>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus pulvinar turpis at
+                            tincidunt.
+                        </p>
+                    </div>
+
+                    <h3>Nuestros servicios</h3>
+                    <div>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus pulvinar turpis at
+                            tincidunt.
+                        </p>
+                    </div>
+
+                    <h3>Nuestros clientes</h3>
+                    <div>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus pulvinar turpis at
+                            tincidunt.
+                        </p>
+                    </div>
+
+                </div>
+
             </div>
 
             <aside id="sidebar">
